# llm_engineering

./: Untitled.ipynb  Untitled1.ipynb  ilija.py  my_notice.md  pyproject.toml  sumarize_web_site.ipynb
moji_primeri/: custom_chat.ipynb  local_sumarization.ipynb  sumarize_web_site.ipynb
week1/: day1.ipynb  day5.ipynb
week2/: day1.ipynb  day2.ipynb  day5.ipynb
