[project]
name = "llms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.3.2",
    "gradio>=5.35.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.4",
    "langchain[docarray]>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-experimental>=0.3.4",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.13.1",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "datasets>=3.6.0",
    "sentencepiece>=0.2.0",
    "google-generativeai>=0.8.5",
    "anthropic>=0.57.1",
    "unstructured>=0.18.2",
    "chromadb>=1.0.15",
    "plotly>=6.2.0",
    "jupyter-dash>=0.4.2",
    "beautifulsoup4>=4.13.4",
    "pydub>=0.25.1",
    "modal>=1.0.5",
    "ollama>=0.5.1",
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.1",
    "psutil>=7.0.0",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "sentence-transformers>=5.0.0",
    "feedparser>=6.0.11",
    "ipykernel>=6.29.5",
    "genai>=1.0.3",
]
